add log4js and configurations

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "superagent": "^4.1.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "log4js": "1.0.0"
   }
 }
