--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "pk10",
+  "name": "tmyapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron .",
+    "pkg": "electron-packager . pk10 --platform=win32 --arch=x64 --out=./out --asar --app-version=0.0.1"
   },
-  "keywords": [
-    "pk"
-  ],
-  "author": "phil",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
+    "electron": "^4.0.3",
     "lodash": "^4.17.11",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2",
-    "superagent": "^4.1.0",
-    "uuid": "^3.3.2",
-    "log4js": "1.0.0"
+    "log4js": "1.0.0",
+    "request": "^2.88.0"
   }
 }
