--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "^4.0.3",
     "lodash": "^4.17.11",
     "log4js": "1.0.0",
+    "random": "^2.0.13",
     "request": "^2.88.0"
   }
 }
